--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -35,7 +35,14 @@
     <button id="btnGo">Go</button>
   </div>
   <div class="box">
+    <span>切换线路:</span>
+    <select id="selNode"></select>
+  </div>
+  <div class="box" id="list">
+  </div>
   <script>
+    const PAGE_CONF_SET = 110
+    const PAGE_CONF_GET = 111
 
     const SW_CONF_RETURN = 112
     const SW_CONF_CHANGE = 113
