--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -34,6 +34,8 @@
   <div class="box">
     <button id="btnGo">Go</button>
   </div>
+  <div class="box" id="list">
+  </div>
   <script>
     const PAGE_CONF_SET = 110
     const PAGE_CONF_GET = 111
