--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -34,6 +34,9 @@
   <div class="box">
     <button id="btnGo">Go</button>
   </div>
+    <div class="box">
+    <select id="selNode"></select>
+  </div>
   <div class="box" id="list">
   </div>
   <script>
