--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -34,7 +34,8 @@
   <div class="box">
     <button id="btnGo">Go</button>
   </div>
-    <div class="box">
+  <div class="box">
+    <span>切换线路:</span>
     <select id="selNode"></select>
   </div>
   <div class="box" id="list">
